control-plane-isolation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: malicious-pod
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh", "-c"]
    args:
      - |
        apk add --no-cache curl && \
        while true; do \
          curl --cacert /var/run/secrets/kubernetes.io/serviceaccount/ca.crt \
          -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" \
          https://kubernetes.default.svc.cluster.local:443/api; \
          sleep 5; \
        done
  restartPolicy: Always
